--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,4 +1,8 @@
+@import url("./components/button-small.css");
+@import url("./components/accessibility.css");
 body {
+  margin: 0;
+  padding: 0;
   font-family: "Montserrat", Arial, Helvetica, sans-serif;
   line-height: 1.3;
 }
